# DailyArxiv

./: .gitignore  README.md  config.example.yaml  config.yaml  prd.md  pyproject.toml  report_preview.html
dailyarxiv/: archivist_sqlite.py  arxiv_client.py  cli.py  config.py  errors.py  llm_client.py  models.py  pipeline.py  trends.py
dailyarxiv/gui/: app.py  forms.py  i18n.py  runner.py
dailyarxiv/render/: renderer.py  weasyprint_renderer.py
dailyarxiv/render/templates/: report.html.j2  report_compact.html.j2  report_editorial.html.j2  report_modern.html.j2
previews/: index.html  report_preview_baseline.html  report_preview_compact.html  report_preview_editorial.html  report_preview_modern.html
tests/: test_basics.py  test_gui_forms.py
tmp_render/: report.html
tools/: generate_layout_previews.py
