[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dailyarxiv"
version = "0.1.0"
description = "ArXiv Daily Express: harvest, LLM-filter, analyze, and render HTML/PDF reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DailyArxiv" }]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "jinja2>=3.1",
  "arxiv>=2.1",
  "openai>=1.30",
  "httpx>=0.28",
]

[project.optional-dependencies]
pdf = [
  "weasyprint>=61",
]
wordcloud = [
  "wordcloud>=1.9",
  "pillow>=10",
]
dev = [
  "pytest>=8",
]
gui = [
  "streamlit>=1.36",
]

[project.scripts]
dailyarxiv = "dailyarxiv.cli:main"
dailyarxiv-gui = "dailyarxiv.gui.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dailyarxiv*"]
exclude = [
  "tests*",
  "reports*",
  "pytest_tmp*",
  "pytest_work_*",
  "pytest-cache-files*",
]

[tool.setuptools.package-data]
"dailyarxiv.render.templates" = ["*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider -p no:tmpdir"
